# rs-zip-service

./: Cargo.toml  README.md
src/: handlers.rs  main.rs
src/client/: client.rs
src/config/: mod.rs
src/storage/: ftp.rs  http.rs  local.rs  mod.rs  openstack.rs  s3.rs
src/utils/: zipper.rs
src/zip/: writer.rs
src/zip_stream/: mod.rs
