[package]
name = "s3-zip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
aws-config = "0.56.1"
aws-sdk-s3control = "0.30.0"
zip = "0.5" 
bytes = "1.0" 
dotenv = "0.15.0"
reqwest = "0.11.22"
async-trait = "0.1.74"
aws-sdk-s3 = "0.35.0"
actix-web = "4.4.0"
futures = "0.3.29"
web = "0.2.12"
