[package]
name = "zip_service"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"

zip = "0.5" 
bytes = "1.0" 
dotenv = "0.15.0"
reqwest = {version = "0.11.22", features = ["stream", "json"]}
async-trait = "0.1.74"
aws-config = "0.100.0"
aws-sdk-s3 = "0.37.0"
actix-web = "4.4.0"
futures = "0.3.29"
web = "0.2.12"
tokio-util = "0.7.10"
async_zip = { version = "0.0.15", features = ["full"] }
tokio-stream = "0.1.14"
actix-cors = "0.6.4"
async-stream = "0.3.5"
